# qmeq

./: pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  full_test.yml
scripts/: cibw_before_all_macos.sh
