[build-system]
requires = [
    "setuptools>=69",
    "wheel",
    "cython==0.29.37",
    "numpy",
    "scipy"
]
build-backend = "setuptools.build_meta"

[project]
name = "qmeq"
version = "1.1"
dependencies = [
  "numpy",
  "scipy"
]
requires-python = ">=3.8"
authors = [
  {name = "Gediminas Kirsanskas"},
  {name = "Martin Josefsson"},
  {name = "Martin Leijnse"},
  {name = "Andreas Wacker"},
  {email = "qmeq.package@gmail.com"},
]
description="Package for transport calculations in quantum dots using approximate quantum master equations"
readme = "README.rst"
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
Homepage = "http://github.com/gedaskir/qmeq"
